@@ -31,7 +31,7 @@ sonar {
         property "sonar.projectKey", "ak-git_DesktopFX"
         property "sonar.organization", "ak-git"
         property "sonar.host.url", "https://sonarcloud.io"
-        property "sonar.login", "ec97b4884454351da027c6345043fc8ae9401d53"
+        property "sonar.login", "81d28baccaacc9dc74ea80f686e08f65a90ed6df"
         property "sonar.branch.name", "briko"
         property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco/test/jacocoTestReport.xml'
     }
@@ -49,9 +49,9 @@ ext {
     uom_se = 'tec.uom:uom-se:1.0.10'
     javax_json = 'org.glassfish:javax.json:1.1.4'
     commons_math3 = 'org.apache.commons:commons-math3:3.6.1'
-    commons_csv = 'org.apache.commons:commons-csv:1.9.0'
-    jSerialComm = 'com.fazecast:jSerialComm:[2.9.1,3.0.0)'
-    jenetics = 'io.jenetics:jenetics:7.1.1'
+    commons_csv = 'org.apache.commons:commons-csv:1.10.0'
+    jSerialComm = 'com.fazecast:jSerialComm:[2.9.3,3.0.0)'
+    jenetics = 'io.jenetics:jenetics:7.1.2'
     javaVersion = JavaVersion.VERSION_19
 }
 
@@ -63,7 +63,7 @@ wrapper {
 
 allprojects {
     group = 'com.ak'
-    version = '2023.03.04'
+    version = '2023.03.14'
     apply plugin: 'idea'
     idea {
         module {
@@ -111,6 +111,10 @@ allprojects {
         }
         forkEvery = 5
         maxHeapSize = '1G'
+    }
+
+    tasks.withType(JavaCompile).each {
+        it.options.compilerArgs.add('--enable-preview')
     }
 }
 
